<resources>
    <string name="app_name">UFIT</string>
    <string name="facebook_app_id">239404453126461</string>
    <string name="kakao_app_id">ea35181cc790d61fd6e58e2cd1aaa96d</string>
    <string name="uf_profile">프로필</string>
    <string name="uf_schedule">스케줄 관리</string>
    <string name="uf_mem">회원 관리</string>
    <string name="uf_message">메세지</string>
    <string name="uf_setting">설정</string>
    <string name="uf_inputmember">회원을 검색하세요</string>
    <string name="uf_location1">시를 선택하세요</string>
    <string name="uf_wanna_delete">정말 삭제하시겠습니까?</string>
    <string name="uf_check">확인</string>
    <string name="uf_cancel">취소</string>
    <string name="uf_login_choice">트레이너와 일반회원을 선택해주세요</string>
    <string name="uf_trainer">트레이너</string>
    <string name="uf_member">일반회원</string>
    <string name="uf_member_profile_weight">체중변화</string>
    <string name="uf_member_profile_workout_level">운동레벨</string>
    <string name="uf_member_profile_size">사이즈달성</string>
    <string name="uf_pm">오후</string>
    <string name="uf_am">오전</string>
    <string name="workout_part_chest">가슴</string>
    <string name="workout_part_back">등</string>
    <string name="workout_part_shoulder">어깨</string>
    <string name="workout_part_arm">팔</string>
    <string name="workout_part_leg">하체</string>
    <string name="workout_part_abs">복근</string>
    <string name="workout_part_run">유산소</string>
    <string name="workout_part_stretch">스트레칭</string>
    <string name="workout_part_rope">줄넘기</string>
    <string name="uf_daily_attendance">해당 날짜의 운동 스케줄을 추가해주세요</string>
    <string name="uf_birth">생년월일 :</string>
    <string name="uf_call">전화번호 :</string>
    <string name="uf_date">수업요일 :</string>
    <string name="uf_last_message">마지막 메세지 : </string>
    <string name="uf_choose_member">회원선택</string>
    <string name="uf_choose_time">시간추가</string>
    <string name="uf_schedule_add_success">스케줄을 추가했습니다</string>
    <string name="uf_schedule_add_fail">값이 입력되지 않았습니다</string>
    <string name="uf_schedule_add_explain">회원이름 선택 후, 해당 스케줄을 등록해주세요.</string>
    <string name="loading">loading</string>
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>

</resources>
