<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mem_reg_dialog"
    android:background="@drawable/bgbgbgbgb">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/pink_img"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mem_manage_regframe"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="38dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@drawable/rounded_dialog"
        android:gravity="center_horizontal"
        android:weightSum="5.5">
        
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="86dp"
            android:textSize="15sp"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/uf_schedule_add_explain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uf_choose_member"
                android:textColor="@color/colorDarkGrey"
                android:textSize="25sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:id="@+id/selected_member"
                android:gravity="center"
                android:background="@drawable/rounded_edittext_black">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/selected_member_img" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/selected_member_name"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uf_choose_time"
                android:textColor="@color/colorDarkGrey"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/selected_time"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/rounded_edittext_black"/>
        </LinearLayout>
        
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/schedule_send"
        android:src="@drawable/btn_plus_sche"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="11dp"
        android:layout_gravity="end|bottom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/explain_reg"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
    <ImageView
        android:id="@+id/uf_schedule_reg_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_menu_x"
        android:layout_gravity="right"
        android:padding="16dp"/>

</FrameLayout>